Refactored files into the MVC architecture. Added login screen in Swing UI.